# pi-vi-cii

./: README.md  install.sh  pyproject.toml
pi_vi_cii/: __init__.py  core.py  globals.py  play_ascii.py  utils.py
src/: core.py  pi_vi_cii.py  utils.py
